--- a/style.css
+++ b/style.css
@@ -217,6 +217,7 @@ body {
 
 /* Tech Stack Section */
 .stack-section {
+    border: 2px solid greenyellow;
     display: flex;
     height: 65vh;
     width: 100%;
@@ -369,20 +370,20 @@ body {
 
 
   .projects-section {
-    border:2px solid blue;
     display: flex;
-    height: 65vh;
+    justify-content: space-around;
+    height: 100vh;
     width: 100%;
     background: white;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     text-align: center;
-    /* overflow: hidden; */
+    overflow: hidden;
     
 }
 
 .projects-container {
+    display: flex;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
     width: 80%;
@@ -390,15 +391,90 @@ body {
 
 
 .projects-section h4 {
-    font-size: 4rem;
+    font-size: 7rem;
     font-weight: 500;
-    height: 500px;
-    margin-top: 35rem;
-    margin-bottom: 6rem;
+    margin-top: -10rem;
+    margin-bottom: -20rem;
     color: black;
     filter: grayscale(100%) opacity(30%);
 }
 
-.row h2 {
-    
+.projects-row {
+    display: flex;
+    justify-content: space-around;
+    color: var(--accent-color);
+
+}
+
+.project-image{
+    position: relative;
+    width: 500px;
+    height: 400px;
+    margin: 0 auto;
+    border-radius: 10%;
+    overflow: hidden; 
+    display: inline-block;
+}
+.project-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.project-image p{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 40px;
+    text-align: left;
+    font-size: 1.8rem;
+    opacity: 0;
+    transform: translateY(-100%);
+    transition: opacity 0.5s ease-in-out,transform 0.5s ease-in-out;
+}
+
+.project-image:hover p{
+    opacity: 1;
+    font-size: 1.8rem;
+    transform: translateY(0);
+}
+
+.projects-pair h3{
+    font-size: 25px;
+    font-weight: 350;
+}
+.projects-pair{
+    flex: 1;
+    gap: 2;
+    text-align: center;
+    color: black;
+}
+
+
+.contact-section{
+    border: 2px solid red;
+    width: 100%;
+    /* background-color: rgb(241, 241, 241); */
+    height: 80vh;
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+.contact-container{
+    border: 2px solid slateblue;
+    height: 100px;
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+.contact-from{
+    border: 2px solid greenyellow;
+    width: 100%;
+    height: 100%;
 }
