--- a/style.css
+++ b/style.css
@@ -478,3 +478,7 @@ body {
     width: 100%;
     height: 100%;
 }
+/* ToDo */
+/* learn how max-margin works */
+/* fix contact me sectopn */
+/* make whole website responsive */
