--- a/style.css
+++ b/style.css
@@ -457,32 +457,52 @@ body {
 
 
 .contact-section{
-    border: 2px solid red;
-    width: 100%;
+    /* border: 2px solid red; */
+    width: 50%;
     background-color: rgb(241, 241, 241);
     color: black;
-    height: 80vh;
+    border-radius: 20px;
+    padding: 70px;
     margin: 0 auto;
 }
-
-.contact-container{
-    border: 2px solid blue;
-    height: 100px;
-    width: 100%;
-    margin-bottom: 10px;
-    padding: 10px;
+.contact-section h3{
+    font-size: 5rem;
+    font-weight: 500;
+    color: black;
+    filter: grayscale(100%) opacity(30%);
+    
 }
 
-.contact-from{
-    border: 2px solid greenyellow;
+input[type=text], input[type=email],textarea{
+    /* border: 2px solid skyblue; */
     width: 100%;
-    height: 100%;
+    padding: 16px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
 }
+
+input[type=submit]{
+    background-color: skyblue;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover{
+    background-color: rgb(154, 213, 236);
+    color: white;
+}
+
+
+
 /* ToDo */
 /* learn how max-margin works */
-/* fix contact me sectopn */
 /* make whole website responsive */
-
 
 footer {
     /* background-color: black; */
