--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@ section {
     justify-content: space-between;
 }
 
-/* Header */.navbar {
-    border: 2px solid red;
+/* Header */
+.navbar {
     position: fixed;
     top: 0;
     left: 0;
@@ -63,13 +63,16 @@ section {
     display: flex;
     align-items: center;
     padding: 24px 18%;
-    backdrop-filter: blur(100px);
+    backdrop-filter: blur(15px);
     z-index: 1000;
     justify-content: flex-start;
     gap: 2rem;
-    background-color: transparent;
+    background-color: rgba(128, 128, 128, 0.7);
     transition: background-color 0.3s ease;
 }
+
+
+  
 
 .navbar .logo a {
     color: white;
@@ -90,22 +93,27 @@ section {
     margin: 0 15px;
 }
 
+.navbar.scrolled {
+    background-color: white;
+}
+
 .navbar .nav-links li a {
     color: white;
     text-decoration: none;
     font-size: 18px;
+    transition: color 0.3s ease-in-out;
 }
 
 .navbar a:hover {
     border-bottom: 2px solid white;
 }
 
-.navbar .scrolled {
-    background-color: black;
-}
+
 
 .navbar.scrolled .nav-links li a{
+    background-color: black;
     color: black ;
+    font-size: 500rem;
 }
 
 .navbar.scrolled .hamburger .bar {
@@ -130,8 +138,8 @@ section {
 
 @media(max-width: 768px) {
     .navbar {
-        border: 2px solid red;
         padding: 20px 5%;
+
     }
 
     .nav-links {
@@ -141,10 +149,12 @@ section {
         width: 100%;
         top: -1000%;
         left: 0;
-        backdrop-filter: blur(100px);
+        backdrop-filter: blur(15px);
         text-align: center;
         padding: 50px 0;
         transition: top 0.9s ease-in-out;
+        background-color: rgba(128, 128, 128, 0.7);
+
     }
     .nav-links.active {
         top: 0;
@@ -333,28 +343,27 @@ section {
     }
 
     .stack-container {
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Allow more space for smaller items */
-        width: 90%; /* Increase the width on smaller screens */
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); 
+        width: 90%; 
     }
 
     .stack-section h4 {
         font-size: 4rem; 
         margin-top: 2rem; 
-        margin-bottom: rem;
         font-weight: 500;
         filter: grayscale(100%) opacity(30%); 
     }
 
     .row {
-        height: auto; /* Allow rows to adjust height as needed */
+        height: auto; 
     }
 
     .pair img {
-        width: 70px; /* Reduce icon size for smaller screens */
+        width: 70px; 
     }
 
     .pair h3 {
-        font-size: 18px; /* Adjust text size */
+        font-size: 18px; 
     }
 }
 
@@ -369,7 +378,6 @@ section {
 }
 
 .about-content{
-    /* border: 2px solid blue; */
     display: flex;
     justify-content: space-between;
     flex-shrink: 0;
@@ -456,6 +464,7 @@ section {
     width: 45%;
     flex-shrink: 0;
     border-radius: 12px;
+    
 
 }
 
@@ -467,6 +476,7 @@ section {
     flex-shrink: 0;
     flex: 1;
     row-gap: 5px;
+    
 }
 
 .project-buttons{
@@ -476,7 +486,6 @@ section {
 }
 
 .github-btn{
-    /* background-color: rgb(250, 232, 198); */
     background-color: white;
 }
 
@@ -487,7 +496,6 @@ section {
 }
 
 .live-btn{
-    /* background-color: rgb(250, 232, 198); */
     background-color: white;
 }
 
@@ -501,6 +509,7 @@ section {
 .project-img-contaier {
     width: 100%; 
     flex-shrink: 0;
+    
 }
 
 .project-img{
@@ -510,13 +519,6 @@ section {
     object-fit: cover;
     object-position: center;
 }
-
-.project-img{
-    text-align: center;
-}
-
-
-
 
 .contact-section{
     background-color: white;
@@ -533,8 +535,8 @@ section {
     row-gap: 30px;
 }
 .contact-form{
-    width: 50%;  /* Adjust as needed */
-    max-width: 1000px; /* Prevents it from being too big */
+    width: 50%; 
+    max-width: 1000px; 
     display: flex;
     flex-direction: column;
     row-gap: 10px;
@@ -543,8 +545,8 @@ section {
     padding-left: 100px;
     padding-right: 100px;
     background-color: rgb(241, 241, 241);
-    font-size: 14px; /* Adjusts text size */
-    margin: auto; /* Centers the form */
+    font-size: 14px; 
+    margin: auto; 
 }
 
 input[type=text], input[type=email],textarea{
